docs: align CONTRIBUTING.md with shared SDK template
Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>